--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ coverage
 nose
 wsgiref
 webob
+protorpc
+git+git://github.com/keenlabs/protobuf.git#egg=protobuf
 git+git://github.com/keenlabs/hamlish-jinja.git#egg=hamlish_jinja
