Adding protocol prefix to upstream

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,7 @@
 
 upstream k9 {
 
-  server /ns/sock/k9;
+  server unix:/ns/sock/k9;
 
 }
 
@@ -11,8 +11,9 @@ server {
   listen 80;
   #listen 443 deferred spdy ssl fastopen;
 
-  uwsgi_pass k9;
-  include uwsgi_params;
+  location / {
+    uwsgi_pass k9;
+    include uwsgi_params;
+  }
 
 }
-
