Updating server conf

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,7 @@
 
-upstream k9 {
+upstream fatcatmap {
 
-  server unix:/ns/sock/k9;
+  server unix:/ns/sock/apps/fatcatmap;
 
 }
 
@@ -12,7 +12,7 @@ server {
   #listen 443 deferred spdy ssl fastopen;
 
   location / {
-    uwsgi_pass k9;
+    uwsgi_pass fatcatmap;
     include uwsgi_params;
   }
 
