--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     , "less": "1.5.1"
     , "grunt": "~0.4.1"
     , "grunt-cli": "~0.1.13"
-    , "grunt-ziti": "~0.0.4"
-    , "grunt-uncss": "~0.3.3"
+    , "grunt-shell": "~0.6.4"
     , "grunt-svgmin": "~0.4.0"
+    , "grunt-contrib-less": "~0.11.0"
     , "grunt-contrib-watch": "~0.6.1"
+    , "grunt-contrib-coffee": "~0.10.1"
     , "grunt-closure-compiler": "~0.0.21"
   }
 }
