Adding SSL configuration. Here goes nothing.

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,25 @@
 
 upstream fatcatmap {
-
   server unix:/ns/sock/apps/fatcatmap;
+}
+
+server {
+
+  ## Listeners
+  listen 80 default_server;
+  listen 443 deferred spdy ssl fastopen default_server;
+
+  ## Server Name
+  server_name fatcatmap.org;
+
+  ## ECC Sandbox Cert
+  ssl_certificate /etc/ssl/issued/fatcatmap/ecc/fatcatmap-org.pem;
+  ssl_certificate_key /etc/ssl/issued/fatcatmap/ecc/sandbox.key;
+
+  location / {
+    uwsgi_pass fatcatmap;
+    include uwsgi_params;
+  }
 
 }
 
@@ -9,7 +27,14 @@ server {
 
   ## Listeners
   listen 80;
-  #listen 443 deferred spdy ssl fastopen;
+  listen 443 deferred spdy ssl;
+
+  ## Server Name
+  server_name deliver.fcm-static.org;
+
+  ## ECC Sandbox Cert
+  ssl_certificate /etc/ssl/issued/fatcatmap/ecc/deliver-fcm-static-org.pem;
+  ssl_certificate_key /etc/ssl/issued/fatcatmap/ecc/sandbox.key;
 
   location / {
     uwsgi_pass fatcatmap;
