Removing TCP_FASTOPEN (for now)

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,7 +7,7 @@ server {
 
   ## Listeners
   listen 80 default_server;
-  listen 443 deferred spdy ssl fastopen default_server;
+  listen 443 deferred spdy ssl default_server;
 
   ## Server Name
   server_name fatcatmap.org;
