--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     }
   ]
   , "devDependencies": {
-      "btoa": "~1.1.1"
+      "underscore": "~1.6.0"
+    , "btoa": "~1.1.1"
     , "uglify-js": "2.4.8"
     , "coffee-script": "1.6.3"
     , "wrench": "1.5.4"
     , "less": "1.5.1"
+    , "webp-bin": "~0.1.4"
     , "grunt": "~0.4.1"
     , "grunt-cli": "~0.1.13"
+    , "grunt-webp": "~0.0.4"
     , "grunt-shell": "~0.6.4"
     , "grunt-svgmin": "~0.4.0"
     , "grunt-contrib-less": "~0.11.0"
     , "grunt-contrib-watch": "~0.6.1"
     , "grunt-contrib-coffee": "~0.10.1"
+    , "grunt-contrib-imagemin": "~0.6.1"
     , "grunt-closure-compiler": "~0.0.21"
   }
 }
