--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -16,6 +16,9 @@ server {
   ssl_certificate /etc/ssl/issued/fatcatmap/ecc/fatcatmap-org-bundle.pem;
   ssl_certificate_key /etc/ssl/issued/fatcatmap/ecc/sandbox.key;
 
+  ## Headers
+  add_header Strict-Transport-Security "157680000; includeSubDomains";
+
   location / {
     uwsgi_pass fatcatmap;
     include uwsgi_params;
