Adding SSL redirect.

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,9 +4,13 @@ upstream fatcatmap {
 }
 
 server {
+  listen 80 default_server;
+  rewrite ^ https://$host$uri$args permanent;
+}
+
+server {
 
   ## Listeners
-  listen 80 default_server;
   listen 443 deferred spdy ssl default_server;
 
   ## Server Name
