Fixed Makefile issues, added local warehouse image proxy, fixed a bunch of issues. Working grapher! WUT

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -21,7 +21,17 @@ server {
   ssl_certificate_key /etc/ssl/issued/fatcatmap/ecc/sandbox.key;
 
   ## Headers
-  add_header Strict-Transport-Security "157680000; includeSubDomains";
+  add_header Strict-Transport-Security "600; includeSubDomains";
+  add_header Public-Key-Pins 'max-age=600; pin-sha256="47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="; pin-sha256="O1Zycm5XaVo1C5PY+9LZ1JOPhPoWhlsCfZ1iQsU2QkY="; includeSubDomains;';
+
+  location /image-proxy/providence-clarity/warehouse {
+    etag off;
+    gzip off;
+    expires off;
+    alias /base/data/warehouse/;
+    add_header Pragma "no-cache";
+    add_header Cache-Control "no-cache, no-store";
+  }
 
   location / {
     uwsgi_pass fatcatmap;
