Fixing grapher issue and adding support for images for legislators

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,8 +1,14 @@
-
+## == upstreams == ##
 upstream fatcatmap {
   server unix:/ns/sock/apps/fatcatmap;
+  keepalive 5;
 }
 
+upstream google_analytics {
+  server https://ssl.google-analytics.com;
+}
+
+## == servers == ##
 server {
   listen 80 default_server;
   rewrite ^ https://$host$uri$args permanent;
