--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "fatcatmap"
   , "description": "coming soon to a riot near you"
-  , "version": "1.0.0"
+  , "version": "0.0.1"
   , "keywords": ["politics", "transparency", "opendata", "opensource"]
   , "homepage": "https://fatcatmap.org"
   , "author": "momentum labs"
@@ -20,7 +20,8 @@
     }
   ]
   , "devDependencies": {
-      "underscore": "~1.6.0"
+      "bower": "~1.3.2"
+    , "underscore": "~1.6.0"
     , "btoa": "~1.1.1"
     , "uglify-js": "2.4.8"
     , "coffee-script": "1.6.3"
@@ -32,6 +33,7 @@
     , "grunt-webp": "~0.0.4"
     , "grunt-shell": "~0.6.4"
     , "grunt-svgmin": "~0.4.0"
+    , "grunt-dart2js": "~0.0.5"
     , "grunt-contrib-less": "~0.11.0"
     , "grunt-contrib-watch": "~0.6.1"
     , "grunt-contrib-coffee": "~0.10.1"
