Adding apache configuration

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,27 +4,16 @@ upstream fatcatmap {
   keepalive 5;
 }
 
-upstream google_analytics {
-  server https://ssl.google-analytics.com;
-}
-
 ## == servers == ##
-server {
-  listen 80 default_server;
-  rewrite ^ https://$host$uri$args permanent;
-}
 
 server {
 
   ## Listeners
-  listen 443 deferred spdy ssl default_server;
+  listen 5000 default_server;  # HTTP listener
+  listen 5001 deferred spdy default_server;  # SPDY listener
 
   ## Server Name
-  server_name fatcatmap.org;
-
-  ## ECC Sandbox Cert
-  ssl_certificate /etc/ssl/issued/fatcatmap/ecc/fatcatmap-org-bundle.pem;
-  ssl_certificate_key /etc/ssl/issued/fatcatmap/ecc/sandbox.key;
+  server_name fatcatmap.org deliver.fcm-static.org deliver.fatcatmap.org fcm-static.org origin.fatcatmap.org;
 
   ## Headers
   add_header Strict-Transport-Security "600; includeSubDomains";
@@ -39,9 +28,13 @@ server {
     add_header Cache-Control "no-cache, no-store";
   }
 
-  location / {
-    uwsgi_pass fatcatmap;
-    include uwsgi_params;
+  location /assets {
+    etag off;
+    gzip off;
+    expires off;
+    alias /base/apps/fatcatmap/assets/;
+    add_header Pragma "no-cache";
+    add_header Cache-Control "no-cache, nostore";
   }
 
 }
