Switching to mod_uwsgi for Unix domain socket features

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -1,7 +1,8 @@
 
 ## Paths
 <Location />
-  ProxyPass / uwsgi://unix:/ns/sock/apps/fatcatmap|http://fatcatmap.org/
+  SetHandler uwsgi-handler
+  uWSGISocket /ns/sock/apps/fatcatmap
 </Location>
 
 ## Caching
