Giving up on unix domains sockets for local routing. Ugh.

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -1,9 +1,6 @@
 
 ## Paths
-<Location />
-  SetHandler uwsgi-handler
-  uWSGISocket /ns/sock/apps/fatcatmap
-</Location>
+ProxyPass / uwsgi://127.0.0.1:9005
 
 ## Caching
 
