Final Apache config (+ combined Nginx config) and fixed image proxy.

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -1,8 +1,6 @@
 
 ## Paths
-ProxyPass / uwsgi://127.0.0.1:9005
-
-## Caching
+ProxyPass / http://127.0.0.1:9005/
 
 ## Pagespeed Config
 ModPagespeedDomain fatcatmap.org
