Fixing up Nginx configs

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,6 +4,11 @@ upstream fatcatmap {
   keepalive 5;
 }
 
+upstream pagespeed {
+  server 127.0.0.1:4000;
+  keepalive 5;
+}
+
 ## == servers == ##
 
 server {
@@ -13,7 +18,7 @@ server {
   listen 5001 deferred spdy default_server;  # SPDY listener
 
   ## Server Name
-  server_name fatcatmap.org deliver.fcm-static.org deliver.fatcatmap.org fcm-static.org origin.fatcatmap.org;
+  server_name fatcatmap.org deliver.fcm-static.org deliver.fatcatmap.org fcm-static.org origin.fatcatmap.org 10.0.5.5 127.0.0.1 '';
 
   ## Headers
   add_header Strict-Transport-Security "600; includeSubDomains";
@@ -35,6 +40,10 @@ server {
     alias /base/apps/fatcatmap/assets/;
     add_header Pragma "no-cache";
     add_header Cache-Control "no-cache, nostore";
+  }
+
+  location / {
+    proxy_pass http://pagespeed/;
   }
 
 }
