Updating server configuration everywhere

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -1,8 +1,16 @@
 
-## Paths
-ProxyPass / http://127.0.0.1:9005/
+<VirtualHost _default_:4001>
 
-## Pagespeed Config
-ModPagespeedDomain fatcatmap.org
-ModPagespeedLoadFromFile "http://fatcatmap.org/assets" "/base/apps/fatcatmap/assets"
-ModPagespeedLoadFromFile "http://deliver.fcm-static.org/assets" "/base/apps/fatcatmap/assets"
+    DocumentRoot "/base/software/htdocs"
+    ServerAdmin hostmaster@momentum.io
+
+    BrowserMatch "MSIE [2-5]" \
+             nokeepalive ssl-unclean-shutdown \
+            downgrade-1.0 force-response-1.0
+
+    CustomLog "/base/software/logs/ssl_request_log" \
+              "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+
+    ProxyPass / http://127.0.0.1:9005/
+
+</VirtualHost>
