--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,13 +4,7 @@ upstream fatcatmap {
   keepalive 5;
 }
 
-upstream pagespeed {
-  server 127.0.0.1:4000;
-  keepalive 5;
-}
-
 ## == servers == ##
-
 server {
 
   ## Listeners
@@ -37,13 +31,14 @@ server {
     etag off;
     gzip off;
     expires off;
-    alias /base/apps/fatcatmap/assets/;
+    alias /base/build/fatcatmap/fatcatmap/assets/;
     add_header Pragma "no-cache";
     add_header Cache-Control "no-cache, nostore";
   }
 
   location / {
-    proxy_pass http://pagespeed/;
+    uwsgi_pass fatcatmap;
+    include uwsgi_params;
   }
 
 }
