--- a/conf/fatcatmap.yaml
+++ b/conf/fatcatmap.yaml
@@ -4,7 +4,6 @@ uwsgi:
   # ~ app settings ~ #
   app: fatcatmap
   workers: 3
-  http-socket: 127.0.0.1:9005
 
   # ~ hostnames ~ #
   host: fatcatmap.org
@@ -25,3 +24,9 @@ uwsgi:
   static: /assets/img fatcatmap/assets/img
   static: /assets/ext fatcatmap/assets/ext
   static: /assets/style fatcatmap/assets/style
+
+  # ~ advanced ~ #
+  http-socket: 127.0.0.1:9005
+  http-socket: 127.0.0.1:9007
+  http-websockets: on
+  static-map: /image-proxy/providence-clarity/warehouse=/base/data/warehouse
