--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -38,7 +38,7 @@
     # - JS-related filters
 
     # - image-related filters
-    ModPagespeedEnableFilters rewrite_images,inline_images,jpeg_sampling
+    ModPagespeedEnableFilters rewrite_images,inline_images
     ModPagespeedEnableFilters strip_image_meta_data,strip_image_color_profile
     ModPagespeedEnableFilters recompress_images,recompress_png,recompress_webp
     ModPagespeedEnableFilters convert_png_to_jpeg,convert_jpeg_to_progressive,convert_jpeg_to_webp,convert_gif_to_png
