Factoring out Pagespeed config, etc

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -1,62 +1,28 @@
 
-<VirtualHost _default_:4001>
+## ~~ app listeners ~~ ##
 
-    # Server Settings
-    ServerAdmin hostmaster@fatcatmap.org
-    DocumentRoot "/base/software/htdocs"
+# SPDY-enabled
+<VirtualHost fatcatmap.org:4000>
+  SpdyEnabled Off
+  Include /base/build/fatcatmap/conf/appserver/app.conf
+</VirtualHost>
 
-    # HTTP Proxy
-    ProxyPass / http://127.0.0.1:9005/
+# legacy
+<VirtualHost fatcatmap.org:4001>
+  SpdyEnabled On
+  Include /base/build/fatcatmap/conf/appserver/app.conf
+</VirtualHost>
 
-    # Pagespeed
-    ModPagespeed On
-    ModPagespeedRespectVary On
-    ModPagespeedXHeaderValue "X120.1"
-    ModPagespeedLowercaseHtmlNames On
-    ModPagespeedRewriteLevel PassThrough
-    ModPagespeedModifyCachingHeaders Off
-    ModPagespeedDisableRewriteOnNoTransform On
+## ~~ static listeners ~~ ##
 
-    # - domains
-    ModPagespeedDomain fatcatmap.org
+# SPDY-enabled
+<VirtualHost deliver.fcm-static.org:4000>
+  SpdyEnabled On
+  Include /base/build/fatcatmap/conf/appserver/static.conf
+</VirtualHost>
 
-    # - general filters
-    ModPagespeedEnableFilters rewrite_domains,extend_cache
-    ModPagespeedEnableFilters extend_cache_pdfs,elide_attributes
-    ModPagespeedEnableFilters collapse_whitespace,remove_comments
-    ModPagespeedEnableFilters insert_dns_prefetch,add_instrumentation
-    ModPagespeedEnableFilters convert_meta_tags,remove_quotes,trim_urls
-
-    # - head-related filters
-    ModPagespeedEnableFilters add_head,combine_heads,move_css_to_head
-
-    # - CSS-related filters
-    ModPagespeedEnableFilters flatten_css_imports
-    ModPagespeedEnableFilters inline_import_to_link,combine_css,rewrite_css
-    ModPagespeedEnableFilters fallback_rewrite_css_urls,rewrite_style_attributes
-
-    # - JS-related filters
-
-    # - image-related filters
-    ModPagespeedEnableFilters rewrite_images,inline_images
-    ModPagespeedEnableFilters strip_image_meta_data,strip_image_color_profile
-    ModPagespeedEnableFilters recompress_images,recompress_png,recompress_webp
-    ModPagespeedEnableFilters convert_png_to_jpeg,convert_jpeg_to_progressive,convert_jpeg_to_webp,convert_gif_to_png
-
-    # Pagespeed Handlers
-    <Location /_k9/pagespeed/statistics>
-      Allow from 10.0.0.0/8
-      SetHandler mod_pagespeed_statistics
-    </Location>
-
-    <Location /_k9/pagespeed/message>
-      Allow from 10.0.0.0/8
-      SetHandler mod_pagespeed_message
-    </Location>
-
-    <Location /_k9/pagespeed/console>
-      Allow from 10.0.0.0/8
-      SetHandler pagespeed_console
-    </Location>
-
+# legacy
+<VirtualHost deliver.fcm-static.org:4001>
+  SpdyEnabled On
+  Include /base/build/fatcatmap/conf/appserver/static.conf
 </VirtualHost>
