Enabling CDN prefixes and updating pagespeed config after scanning logs for errors

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -2,27 +2,21 @@
 ## ~~ app listeners ~~ ##
 
 # SPDY-enabled
-<VirtualHost fatcatmap.org:4000>
-  SpdyEnabled Off
-  Include /base/build/fatcatmap/conf/appserver/app.conf
-</VirtualHost>
-
-# legacy
-<VirtualHost fatcatmap.org:4001>
+<VirtualHost *:4000>
   SpdyEnabled On
   Include /base/build/fatcatmap/conf/appserver/app.conf
 </VirtualHost>
 
 ## ~~ static listeners ~~ ##
 
-# SPDY-enabled
-<VirtualHost deliver.fcm-static.org:4000>
-  SpdyEnabled On
+# legacy
+<VirtualHost *:4002>
+  SpdyEnabled Off
   Include /base/build/fatcatmap/conf/appserver/static.conf
 </VirtualHost>
 
-# legacy
-<VirtualHost deliver.fcm-static.org:4001>
+# SPDY-enabled
+<VirtualHost *:4003>
   SpdyEnabled On
   Include /base/build/fatcatmap/conf/appserver/static.conf
 </VirtualHost>
