--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -1,13 +1,19 @@
 
 # Pagespeed
 ModPagespeed On
-ModPagespeedRespectVary On
-ModPagespeedXHeaderValue "X120.2"
+ModPagespeedRespectVary Off
+ModPagespeedXHeaderValue "X120.5"
 ModPagespeedLowercaseHtmlNames On
+ModPagespeedCombineAcrossPaths On
+ModPagespeedBeaconUrl "/_k9/beacon"
 ModPagespeedRewriteLevel PassThrough
-ModPagespeedModifyCachingHeaders Off
+ModPagespeedModifyCachingHeaders On
 ModPagespeedDisableRewriteOnNoTransform On
 ModPagespeedCriticalImagesBeaconEnabled On
+
+# - paths
+ModPagespeedAllow "*"
+ModPagespeedAllow "/assets/*"
 
 # - domains
 ModPagespeedDomain fatcatmap.org
@@ -19,7 +25,7 @@ ModPagespeedLoadFromFile //fatcatmap.org/assets/ /base/build/fatcatmap/fatcatmap
 ModPagespeedLoadFromFile //deliver.fcm-static.org/assets/ /base/build/fatcatmap/fatcatmap/assets/
 
 # - proxies
-ModPagespeedMapProxyDomain //fatcatmap.org/font-proxy //cloud.typography.com/6717292
+ModPagespeedMapProxyDomain https://fatcatmap.org/font-proxy http://cloud.typography.com/6717292
 
 # - general filters
 ModPagespeedEnableFilters rewrite_domains,extend_cache
