--- a/conf/appserver/static.conf
+++ b/conf/appserver/static.conf
@@ -1,6 +1,7 @@
 
 # Server Settings
 ServerName deliver.fcm-static.org
+ServerAlias *.deliver.fcm-static.org
 ServerAdmin hostmaster@fatcatmap.org
 DocumentRoot "/base/software/htdocs"
 
@@ -8,3 +9,7 @@ DocumentRoot "/base/software/htdocs"
 Alias /assets/ /base/build/fatcatmap/fatcatmap/assets/
 Alias /static/ /base/build/fatcatmap/fatcatmap/static/
 Alias /image-proxy/providence-clarity/warehouse/ /base/data/warehouse/
+
+<Directory /base/data/warehouse>
+  Allow from all
+</Directory>
