Adding header configuration and fixing issues with local proxy.

--- a/conf/appserver/app.conf
+++ b/conf/appserver/app.conf
@@ -4,8 +4,13 @@ ServerName fatcatmap.org
 ServerAdmin hostmaster@fatcatmap.org
 DocumentRoot "/base/software/htdocs"
 
-# Pagespeed Conf
+# Pagespeed Conf & Paths
+Include /base/build/fatcatmap/conf/appserver/paths.conf
 Include /base/build/fatcatmap/conf/appserver/pagespeed.conf
 
 # HTTP Proxy
+ProxyPass /assets/ !
+ProxyPass /static/ !
+ProxyPass /font-proxy/ !
+ProxyPass /image-proxy/ !
 ProxyPass / http://127.0.0.1:9005/
