--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -66,3 +66,6 @@ ModPagespeedEnableFilters convert_png_to_jpeg,convert_jpeg_to_progressive,conver
   Allow from 10.0.0.0/8
   SetHandler pagespeed_console
 </Location>
+
+# Headers
+Include /base/build/fatcatmap/conf/appserver/headers.conf
