--- a/conf/appserver/static.conf
+++ b/conf/appserver/static.conf
@@ -6,10 +6,5 @@ ServerAdmin hostmaster@fatcatmap.org
 DocumentRoot "/base/software/htdocs"
 
 # Static Aliases
-Alias /assets/ /base/build/fatcatmap/fatcatmap/assets/
-Alias /static/ /base/build/fatcatmap/fatcatmap/static/
-Alias /image-proxy/providence-clarity/warehouse/ /base/data/warehouse/
-
-<Directory /base/data/warehouse>
-  Allow from all
-</Directory>
+Include /base/build/fatcatmap/conf/appserver/paths.conf
+Include /base/build/fatcatmap/conf/appserver/pagespeed.conf
