Switching over to deliver-based fonts

--- a/conf/appserver/headers.conf
+++ b/conf/appserver/headers.conf
@@ -1,5 +1,5 @@
 
 # ~~ Top-level Headers ~~ #
-Header set Server "Catnip/K9-v130x155"
+Header set Server "Catnip/K9-v130x160"
 Header set Strict-Transport-Security "600; includeSubDomains"
-Header set Public-Key-Pins "max-age=600; pin-sha256="47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="; pin-sha256="O1Zycm5XaVo1C5PY+9LZ1JOPhPoWhlsCfZ1iQsU2QkY="; includeSubDomains"
+Header set Public-Key-Pins 'max-age=600; pin-sha256="47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="; pin-sha256="O1Zycm5XaVo1C5PY+9LZ1JOPhPoWhlsCfZ1iQsU2QkY="; includeSubDomains'
