--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -2,30 +2,43 @@
 # Pagespeed
 ModPagespeed On
 ModPagespeedRespectVary Off
-ModPagespeedXHeaderValue "X120.5"
+ModPagespeedAddOptionsToUrls Off
 ModPagespeedLowercaseHtmlNames On
 ModPagespeedCombineAcrossPaths On
+ModPagespeedXHeaderValue "X125.30"
 ModPagespeedBeaconUrl "/_k9/beacon"
 ModPagespeedRewriteLevel PassThrough
 ModPagespeedModifyCachingHeaders On
-ModPagespeedDisableRewriteOnNoTransform On
+ModPagespeedImplicitCacheTtlMs 30000
 ModPagespeedCriticalImagesBeaconEnabled On
+ModPagespeedInPlaceResourceOptimization Off
+ModPagespeedDisableRewriteOnNoTransform Off
 
 # - paths
 ModPagespeedAllow "*"
+ModPagespeedAllow "assets/*"
 ModPagespeedAllow "/assets/*"
+ModPagespeedAllow "/js-proxy/*"
+ModPagespeedAllow "/font-proxy/*"
+ModPagespeedAllow "/style-proxy/*"
+ModPagespeedAllow "/image-proxy/*"
 
 # - domains
 ModPagespeedDomain fatcatmap.org
+ModPagespeedDomain cloud.typography.com
+ModPagespeedDomain deliver.fcm-static.org
+ModPagespeedDomain *.deliver.fcm-static.org
+
+# - shards
+ModPagespeedMapRewriteDomain http://fatcatmap.org https://deliver.fcm-static.org
+ModPagespeedMapRewriteDomain https://fatcatmap.org https://deliver.fcm-static.org
+ModPagespeedMapRewriteDomain http://cloud.typography.com https://deliver.fcm-static.org
+ModPagespeedMapRewriteDomain https://cloud.typography.com https://deliver.fcm-static.org
 
 # - origins
-ModPagespeedMapOriginDomain http://cloud.typography.com //cloud.typography.com
 ModPagespeedMapOriginDomain http://cloud.typography.com https://cloud.typography.com
-ModPagespeedLoadFromFile //fatcatmap.org/assets/ /base/build/fatcatmap/fatcatmap/assets/
-ModPagespeedLoadFromFile //deliver.fcm-static.org/assets/ /base/build/fatcatmap/fatcatmap/assets/
-
-# - proxies
-ModPagespeedMapProxyDomain https://fatcatmap.org/font-proxy http://cloud.typography.com/6717292
+ModPagespeedLoadFromFile http://fatcatmap.org/assets /base/build/fatcatmap/fatcatmap/assets
+ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/build/fatcatmap/fatcatmap/assets
 
 # - general filters
 ModPagespeedEnableFilters rewrite_domains,extend_cache
@@ -44,11 +57,14 @@ ModPagespeedEnableFilters inline_import_to_link,combine_css,rewrite_css
 ModPagespeedEnableFilters fallback_rewrite_css_urls,rewrite_style_attributes
 
 # - JS-related filters
+ModPagespeedEnableFilters rewrite_javascript,combine_javascript
+ModPagespeedEnableFilters inline_javascript,outline_javascript
 
 # - image-related filters
-ModPagespeedEnableFilters rewrite_images,inline_images
+ModPagespeedEnableFilters rewrite_images,inline_images,dedup_inlined_images
 ModPagespeedEnableFilters strip_image_meta_data,strip_image_color_profile
 ModPagespeedEnableFilters recompress_images,recompress_png,recompress_webp
+ModPagespeedEnableFilters resize_mobile_images,inline_preview_images,resize_rendered_image_dimensions
 ModPagespeedEnableFilters convert_png_to_jpeg,convert_jpeg_to_progressive,convert_jpeg_to_webp,convert_gif_to_png
 
 # Pagespeed Handlers
