--- a/conf/appserver/paths.conf
+++ b/conf/appserver/paths.conf
@@ -1,27 +1,50 @@
 
 # ~~ expiry settings ~~ #
 ExpiresActive On
-ExpiresByType text/css A3600
-ExpiresByType text/html A3600
+ExpiresByType text/css A2592000
+ExpiresByType text/html A2592000
 ExpiresByType image/* A2592000
-ExpiresByType application/javascript A3600
+ExpiresByType application/javascript A2592000
 
 # ~~ Directories ~~ #
-<Directory /base/data/warehouse>
+<Directory /base/data/warehouse/>
   Allow from all
+  Order allow,deny
+  Allow from 127.0.0.1
+  Allow from ::1
 </Directory>
 
-<Directory /base/build/fatcatmap/assets>
+<Directory /base/build/fatcatmap/fatcatmap/assets/>
   Allow from all
+  Order allow,deny
+  Allow from 127.0.0.1
+  Allow from ::1
 </Directory>
 
 # ~~ Locations ~~ #
+Alias /assets/ /base/build/fatcatmap/fatcatmap/assets/
 <Location /assets/>
-  FileETag INode MTime
-  Alias /base/build/fatcatmap/fatcatmap/assets/
+  Header set Cache-Control "public, max-age=2592000"
+  Allow from all
+  Order allow,deny
+  Allow from 127.0.0.1
+  Allow from ::1
 </Location>
 
+<Location /font-proxy/>
+  Header unset ETag
+  ProxyPass http://cloud.typography.com/6717292/
+  ProxyPassReverse http://cloud.typography.com/6717292/
+  Header set Cache-Control "public, max-age=2592000"
+  Allow from all
+  Order allow,deny
+</Location>
+
+Alias /image-proxy/providence-clarity/warehouse/ /base/data/warehouse/
 <Location /image-proxy/providence-clarity/warehouse/>
-  FileETag INode MTime
-  Alias /base/data/warehouse/
+  Header set Cache-Control "public, max-age=2592000"
+  Allow from all
+  Order allow,deny
+  Allow from 127.0.0.1
+  Allow from ::1
 </Location>
