--- a/conf/appserver/static.conf
+++ b/conf/appserver/static.conf
@@ -8,3 +8,7 @@ DocumentRoot "/base/software/htdocs"
 # Static Aliases
 Include /base/build/fatcatmap/conf/appserver/paths.conf
 Include /base/build/fatcatmap/conf/appserver/pagespeed.conf
+
+# Proxy Settings
+ProxyVia Off
+ProxyPreserveHost Off
