--- a/conf/appserver/app.conf
+++ b/conf/appserver/app.conf
@@ -13,4 +13,6 @@ ProxyPass /assets/ !
 ProxyPass /static/ !
 ProxyPass /font-proxy/ !
 ProxyPass /image-proxy/ !
-ProxyPass / http://127.0.0.1:9005/
+ProxyPass / http://127.0.0.1:9005/ min=1 keepalive=On
+ProxyPassReverse / http://127.0.0.1:9005/
+ProxyPreserveHost On
