Finishing up configuration cleanups.

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -2,8 +2,15 @@
 ## ~~ app listeners ~~ ##
 
 # SPDY-enabled
-<VirtualHost *:4000>
+<VirtualHost *:3005>
   SpdyEnabled On
+  SpdyDebugUseSpdyForNonSslConnections 3
+  Include /base/build/fatcatmap/conf/appserver/app.conf
+</VirtualHost>
+
+<VirtualHost *:3006>
+  SpdyEnabled Off
+  SpdyDebugUseSpdyForNonSslConnections off
   Include /base/build/fatcatmap/conf/appserver/app.conf
 </VirtualHost>
 
@@ -11,13 +18,15 @@
 ## ~~ static listeners ~~ ##
 
 # legacy
-<VirtualHost *:4002>
+<VirtualHost *:3007>
   SpdyEnabled Off
+  SpdyDebugUseSpdyForNonSslConnections off
   Include /base/build/fatcatmap/conf/appserver/static.conf
 </VirtualHost>
 
 # SPDY-enabled
-<VirtualHost *:4003>
+<VirtualHost *:3008>
   SpdyEnabled On
+  SpdyDebugUseSpdyForNonSslConnections 3
   Include /base/build/fatcatmap/conf/appserver/static.conf
 </VirtualHost>
