--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -29,14 +29,16 @@ ModPagespeedDomain cloud.typography.com
 ModPagespeedDomain deliver.fcm-static.org
 ModPagespeedDomain *.deliver.fcm-static.org
 
-# - shards
-ModPagespeedMapRewriteDomain http://fatcatmap.org https://deliver.fcm-static.org
-ModPagespeedMapRewriteDomain https://fatcatmap.org https://deliver.fcm-static.org
-ModPagespeedMapRewriteDomain http://cloud.typography.com https://deliver.fcm-static.org
-ModPagespeedMapRewriteDomain https://cloud.typography.com https://deliver.fcm-static.org
+# - shards & rewrites
+ModPagespeedMapRewriteDomain //deliver.fcm-static.org http://fatcatmap.org
+ModPagespeedMapRewriteDomain //deliver.fcm-static.org https://fatcatmap.org
+ModPagespeedMapRewriteDomain //deliver.fcm-static.org http://cloud.typography.com
+ModPagespeedMapRewriteDomain //deliver.fcm-static.org https://cloud.typography.com
+ModPagespeedShardDomain http://deliver.fcm-static.org https://deliver.fcm-static.org
 
 # - origins
 ModPagespeedMapOriginDomain http://cloud.typography.com https://cloud.typography.com
+ModPagespeedMapOriginDomain http://deliver.fcm-static.org https://deliver.fcm-static.org
 ModPagespeedLoadFromFile http://fatcatmap.org/assets /base/build/fatcatmap/fatcatmap/assets
 ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/build/fatcatmap/fatcatmap/assets
 
