--- a/conf/appserver/paths.conf
+++ b/conf/appserver/paths.conf
@@ -1,10 +1,7 @@
 
-# ~~ expiry settings ~~ #
-ExpiresActive On
-ExpiresByType text/css A2592000
-ExpiresByType text/html A2592000
-ExpiresByType image/* A2592000
-ExpiresByType application/javascript A2592000
+MCacheSize 8000
+CacheIgnoreNoLastMod On
+CacheIgnoreCacheControl On
 
 # ~~ Directories ~~ #
 <Directory /base/data/warehouse/>
@@ -22,27 +19,34 @@ ExpiresByType application/javascript A2592000
 </Directory>
 
 # ~~ Locations ~~ #
+CacheEnable mem /assets/
 Alias /assets/ /base/build/fatcatmap/fatcatmap/assets/
 <Location /assets/>
-  Header set Cache-Control "public, max-age=2592000"
+  Header unset Age
+  Header unset Last-Modified
+  Header unset Expires
+  Header set Cache-Control "public, max-age=31536000"
   Allow from all
   Order allow,deny
   Allow from 127.0.0.1
   Allow from ::1
 </Location>
 
+CacheEnable mem /font-proxy/
 <Location /font-proxy/>
-  Header unset ETag
+  FileETag Size
   ProxyPass http://cloud.typography.com/6717292/
   ProxyPassReverse http://cloud.typography.com/6717292/
-  Header set Cache-Control "public, max-age=2592000"
+  Header set Cache-Control "public, max-age=31536000"
   Allow from all
   Order allow,deny
 </Location>
 
+CacheEnable mem /image-proxy/
 Alias /image-proxy/providence-clarity/warehouse/ /base/data/warehouse/
 <Location /image-proxy/providence-clarity/warehouse/>
-  Header set Cache-Control "public, max-age=2592000"
+  Header set Cache-Control "public, max-age=31536000"
+  Header unset Last-Modified
   Allow from all
   Order allow,deny
   Allow from 127.0.0.1
