Fixing up issues with HSTS and fixing HTTPS redirect

--- a/conf/appserver/app.conf
+++ b/conf/appserver/app.conf
@@ -6,6 +6,7 @@ DocumentRoot "/base/software/htdocs"
 
 # Pagespeed Conf & Paths
 Include /base/build/fatcatmap/conf/appserver/paths.conf
+Include /base/build/fatcatmap/conf/appserver/headers.conf
 Include /base/build/fatcatmap/conf/appserver/pagespeed.conf
 
 # HTTP Proxy
