--- a/conf/appserver/static.conf
+++ b/conf/appserver/static.conf
@@ -7,6 +7,7 @@ DocumentRoot "/base/software/htdocs"
 
 # Static Aliases
 Include /base/build/fatcatmap/conf/appserver/paths.conf
+Include /base/build/fatcatmap/conf/appserver/headers.conf
 Include /base/build/fatcatmap/conf/appserver/pagespeed.conf
 
 # Proxy Settings
