Adding custom fetch header so redirects work for static assets

--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -13,6 +13,7 @@ ModPagespeedImplicitCacheTtlMs 30000
 ModPagespeedCriticalImagesBeaconEnabled On
 ModPagespeedInPlaceResourceOptimization Off
 ModPagespeedDisableRewriteOnNoTransform Off
+ModPagespeedCustomFetchHeader XAF-Origin pagespeed
 
 # - paths
 ModPagespeedAllow "*"
