--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -46,7 +46,7 @@ ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/build/fatcat
 # - general filters
 ModPagespeedEnableFilters rewrite_domains,extend_cache
 ModPagespeedEnableFilters extend_cache_pdfs,elide_attributes
-ModPagespeedEnableFilters collapse_whitespace,remove_comments
+#ModPagespeedEnableFilters collapse_whitespace,remove_comments
 ModPagespeedEnableFilters insert_dns_prefetch,add_instrumentation
 ModPagespeedEnableFilters convert_meta_tags,remove_quotes,trim_urls
 
@@ -61,7 +61,7 @@ ModPagespeedEnableFilters fallback_rewrite_css_urls,rewrite_style_attributes
 
 # - JS-related filters
 ModPagespeedEnableFilters rewrite_javascript,combine_javascript
-ModPagespeedEnableFilters inline_javascript,outline_javascript
+ModPagespeedEnableFilters inline_javascript,outline_javascript,defer_javascript
 
 # - image-related filters
 ModPagespeedEnableFilters rewrite_images,inline_images,dedup_inlined_images
