--- a/conf/appserver/paths.conf
+++ b/conf/appserver/paths.conf
@@ -26,6 +26,7 @@ Alias /assets/ /base/build/fatcatmap/fatcatmap/assets/
   Header unset Last-Modified
   Header unset Expires
   Header set Cache-Control "public, max-age=31536000"
+  Header set Access-Control-Allow-Origin "*"
   Allow from all
   Order allow,deny
   Allow from 127.0.0.1
