Starting new files for history and storage (for state), adjusting security-related HTTP headers

--- a/conf/appserver/headers.conf
+++ b/conf/appserver/headers.conf
@@ -1,5 +1,9 @@
 
 # ~~ Top-level Headers ~~ #
-Header set Server "Catnip/K9-v130x160"
 Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
 Header set Public-Key-Pins 'max-age=31536000; pin-sha256="47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="; pin-sha256="O1Zycm5XaVo1C5PY+9LZ1JOPhPoWhlsCfZ1iQsU2QkY="; includeSubDomains'
+Header set Content-Security-Policy "script-src 'self' https://deliver.fcm-static.org connect-src 'self' https://api.fatcatmap.org https://realtime.fatcatmap.org"
+Header set X-Frame-Options "DENY"
+Header set X-Content-Type-Options "nosniff"
+Header set X-XSS-Protection "1; mode=block"
+Header set X-UA-Compatible "Chrome=1,IE=edge"
