--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -10,6 +10,7 @@ ModPagespeedBeaconUrl "/_k9/beacon"
 ModPagespeedRewriteLevel PassThrough
 ModPagespeedModifyCachingHeaders On
 ModPagespeedImplicitCacheTtlMs 30000
+ModPagespeedAnalyticsID UA-25133943-11
 ModPagespeedCriticalImagesBeaconEnabled On
 ModPagespeedInPlaceResourceOptimization Off
 ModPagespeedDisableRewriteOnNoTransform Off
@@ -44,29 +45,33 @@ ModPagespeedLoadFromFile http://fatcatmap.org/assets /base/build/fatcatmap/fatca
 ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/build/fatcatmap/fatcatmap/assets
 
 # - general filters
+ModPagespeedEnableFilters local_storage_cache
 ModPagespeedEnableFilters rewrite_domains,extend_cache
 ModPagespeedEnableFilters extend_cache_pdfs,elide_attributes
 #ModPagespeedEnableFilters collapse_whitespace,remove_comments
 ModPagespeedEnableFilters insert_dns_prefetch,add_instrumentation
 ModPagespeedEnableFilters convert_meta_tags,remove_quotes,trim_urls
 
+# - analytics filters
+ModPagespeedEnableFilters insert_ga,make_google_analytics_async
+
 # - head-related filters
 ModPagespeedEnableFilters add_head,combine_heads,move_css_to_head
 
 # - CSS-related filters
-ModPagespeedEnableFilters move_css_above_scripts
+ModPagespeedEnableFilters move_css_above_scripts,inline_google_font_css
 ModPagespeedEnableFilters inline_css,outline_css,flatten_css_imports
 ModPagespeedEnableFilters inline_import_to_link,combine_css,rewrite_css
 ModPagespeedEnableFilters fallback_rewrite_css_urls,rewrite_style_attributes
 
 # - JS-related filters
-ModPagespeedEnableFilters rewrite_javascript,combine_javascript
+ModPagespeedEnableFilters rewrite_javascript,combine_javascript,prioritize_critical_css
 ModPagespeedEnableFilters inline_javascript,outline_javascript,defer_javascript
 
 # - image-related filters
-ModPagespeedEnableFilters rewrite_images,inline_images,dedup_inlined_images
-ModPagespeedEnableFilters strip_image_meta_data,strip_image_color_profile
-ModPagespeedEnableFilters recompress_images,recompress_png,recompress_webp
+ModPagespeedEnableFilters rewrite_images,inline_images,dedup_inlined_images,sprite_images
+ModPagespeedEnableFilters strip_image_meta_data,strip_image_color_profile,convert_to_webp_lossless
+ModPagespeedEnableFilters recompress_images,recompress_png,recompress_webp,jpeg_subsampling
 ModPagespeedEnableFilters resize_mobile_images,inline_preview_images,resize_rendered_image_dimensions
 ModPagespeedEnableFilters convert_png_to_jpeg,convert_jpeg_to_progressive,convert_jpeg_to_webp,convert_gif_to_png
 
