--- a/conf/appserver/paths.conf
+++ b/conf/appserver/paths.conf
@@ -22,11 +22,10 @@ CacheIgnoreCacheControl On
 CacheEnable mem /assets/
 Alias /assets/ /base/build/fatcatmap/fatcatmap/assets/
 <Location /assets/>
-  Header unset Age
   Header unset Last-Modified
   Header unset Expires
   Header set Cache-Control "public, max-age=31536000"
-  Header set Access-Control-Allow-Origin "*"
+  Header set Access-Control-Allow-Origin "https://fatcatmap.org http://localhost:5000"
   Allow from all
   Order allow,deny
   Allow from 127.0.0.1
