Removing conflicting Pagespeed filters.

--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -45,7 +45,6 @@ ModPagespeedLoadFromFile http://fatcatmap.org/assets /base/build/fatcatmap/fatca
 ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/build/fatcatmap/fatcatmap/assets
 
 # - general filters
-ModPagespeedEnableFilters local_storage_cache
 ModPagespeedEnableFilters rewrite_domains,extend_cache
 ModPagespeedEnableFilters extend_cache_pdfs,elide_attributes
 #ModPagespeedEnableFilters collapse_whitespace,remove_comments
@@ -66,7 +65,7 @@ ModPagespeedEnableFilters fallback_rewrite_css_urls,rewrite_style_attributes
 
 # - JS-related filters
 ModPagespeedEnableFilters rewrite_javascript,combine_javascript,prioritize_critical_css
-ModPagespeedEnableFilters inline_javascript,outline_javascript,defer_javascript
+ModPagespeedEnableFilters inline_javascript,outline_javascript
 
 # - image-related filters
 ModPagespeedEnableFilters rewrite_images,inline_images,dedup_inlined_images,sprite_images
