Further fixes for CSP+Pagespeed.

--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -64,8 +64,8 @@ ModPagespeedEnableFilters inline_import_to_link,combine_css,rewrite_css
 ModPagespeedEnableFilters fallback_rewrite_css_urls,rewrite_style_attributes
 
 # - JS-related filters
-ModPagespeedEnableFilters rewrite_javascript,combine_javascript,prioritize_critical_css
 ModPagespeedEnableFilters inline_javascript,outline_javascript
+ModPagespeedEnableFilters rewrite_javascript,prioritize_critical_css
 
 # - image-related filters
 ModPagespeedEnableFilters rewrite_images,inline_images,dedup_inlined_images,sprite_images
