--- a/conf/appserver/paths.conf
+++ b/conf/appserver/paths.conf
@@ -32,6 +32,17 @@ Alias /assets/ /base/build/fatcatmap/fatcatmap/assets/
   Allow from ::1
 </Location>
 
+<Location /assets/ext/icons/>
+  Header unset Last-Modified
+  Header unset Expires
+  Header set Cache-Control "public, max-age=31536000"
+  Header set Access-Control-Allow-Origin "https://fatcatmap.org http://localhost:5000"
+  Allow from all
+  Order allow,deny
+  Allow from 127.0.0.1
+  Allow from ::1
+</Location>
+
 CacheEnable mem /font-proxy/
 <Location /font-proxy/>
   FileETag Size
