Fixing typography issues

--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -34,12 +34,9 @@ ModPagespeedDomain *.deliver.fcm-static.org
 # - shards & rewrites
 ModPagespeedMapRewriteDomain //deliver.fcm-static.org http://fatcatmap.org
 ModPagespeedMapRewriteDomain //deliver.fcm-static.org https://fatcatmap.org
-ModPagespeedMapRewriteDomain //deliver.fcm-static.org http://cloud.typography.com
-ModPagespeedMapRewriteDomain //deliver.fcm-static.org https://cloud.typography.com
 ModPagespeedShardDomain http://deliver.fcm-static.org https://deliver.fcm-static.org
 
 # - origins
-ModPagespeedMapOriginDomain http://cloud.typography.com https://cloud.typography.com
 ModPagespeedMapOriginDomain http://deliver.fcm-static.org https://deliver.fcm-static.org
 ModPagespeedLoadFromFile http://fatcatmap.org/assets /base/build/fatcatmap/fatcatmap/assets
 ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/build/fatcatmap/fatcatmap/assets
@@ -47,7 +44,7 @@ ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/build/fatcat
 # - general filters
 ModPagespeedEnableFilters rewrite_domains,extend_cache
 ModPagespeedEnableFilters extend_cache_pdfs,elide_attributes
-#ModPagespeedEnableFilters collapse_whitespace,remove_comments
+ModPagespeedEnableFilters collapse_whitespace,remove_comments
 ModPagespeedEnableFilters insert_dns_prefetch,add_instrumentation
 ModPagespeedEnableFilters convert_meta_tags,remove_quotes,trim_urls
 
