Fixing issue with HTTP GA, and fixing issue with incorrect JS

--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -49,7 +49,7 @@ ModPagespeedEnableFilters insert_dns_prefetch,add_instrumentation
 ModPagespeedEnableFilters convert_meta_tags,remove_quotes,trim_urls
 
 # - analytics filters
-ModPagespeedEnableFilters insert_ga,make_google_analytics_async
+#ModPagespeedEnableFilters insert_ga,make_google_analytics_async
 
 # - head-related filters
 ModPagespeedEnableFilters add_head,combine_heads,move_css_to_head
