Switching to hour-long timeouts for HSTS, PKP and Cache-Control.

--- a/conf/appserver/app.conf
+++ b/conf/appserver/app.conf
@@ -17,4 +17,7 @@ ProxyPass /image-proxy/ !
 ProxyPass / http://127.0.0.1:9005/ min=1 keepalive=On
 ProxyPassReverse / http://127.0.0.1:9005/
 ProxyPreserveHost On
-Header set Public-Key-Pins 'max-age=31536000; pin-sha256="47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="; pin-sha256="O1Zycm5XaVo1C5PY+9LZ1JOPhPoWhlsCfZ1iQsU2QkY="; includeSubDomains'
+Header set Public-Key-Pins 'max-age=600; pin-sha256="47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="; pin-sha256="O1Zycm5XaVo1C5PY+9LZ1JOPhPoWhlsCfZ1iQsU2QkY="; includeSubDomains'
+
+# PKP long TTL: 31536000
+
