--- a/conf/appserver/paths.conf
+++ b/conf/appserver/paths.conf
@@ -3,6 +3,8 @@ MCacheSize 8000
 CacheIgnoreNoLastMod On
 CacheIgnoreCacheControl On
 
+# long TTL = 31536000
+
 # ~~ Directories ~~ #
 <Directory /base/data/warehouse/>
   Allow from all
@@ -24,7 +26,7 @@ Alias /assets/ /base/build/fatcatmap/fatcatmap/assets/
 <Location /assets/>
   Header unset Last-Modified
   Header unset Expires
-  Header set Cache-Control "public, max-age=31536000"
+  Header set Cache-Control "public, max-age=3600"
   Header set Access-Control-Allow-Origin "https://fatcatmap.org http://localhost:5000"
   Allow from all
   Order allow,deny
@@ -35,7 +37,7 @@ Alias /assets/ /base/build/fatcatmap/fatcatmap/assets/
 <Location /assets/ext/icons/>
   Header unset Last-Modified
   Header unset Expires
-  Header set Cache-Control "public, max-age=31536000"
+  Header set Cache-Control "public, max-age=3600"
   Header set Access-Control-Allow-Origin "https://fatcatmap.org http://localhost:5000"
   Allow from all
   Order allow,deny
@@ -48,7 +50,7 @@ CacheEnable mem /font-proxy/
   FileETag Size
   ProxyPass http://cloud.typography.com/6717292/
   ProxyPassReverse http://cloud.typography.com/6717292/
-  Header set Cache-Control "public, max-age=31536000"
+  Header set Cache-Control "public, max-age=3600"
   Allow from all
   Order allow,deny
 </Location>
@@ -56,7 +58,7 @@ CacheEnable mem /font-proxy/
 CacheEnable mem /image-proxy/
 Alias /image-proxy/providence-clarity/warehouse/ /base/data/warehouse/
 <Location /image-proxy/providence-clarity/warehouse/>
-  Header set Cache-Control "public, max-age=31536000"
+  Header set Cache-Control "public, max-age=3600"
   Header unset Last-Modified
   Allow from all
   Order allow,deny
