--- a/conf/appserver/headers.conf
+++ b/conf/appserver/headers.conf
@@ -1,4 +1,8 @@
 
 # ~~ Top-level Headers ~~ #
-Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+
+# HSTS long TTL = 31536000
+Header set Strict-Transport-Security "max-age=3600; includeSubDomains"
 Header set X-Content-Type-Options "nosniff"
+Header unset X-Mod-Pagespeed
+Header unset X-Mod-Spdy
