Removing crappy PS-related JS for image beacons.

--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -41,12 +41,16 @@ ModPagespeedMapOriginDomain http://deliver.fcm-static.org https://deliver.fcm-st
 ModPagespeedLoadFromFile http://fatcatmap.org/assets /base/build/fatcatmap/fatcatmap/assets
 ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/build/fatcatmap/fatcatmap/assets
 
+# - disabled filters
+ModPagespeedDisableFilters add_instrumentation,prioritize_critical_css,local_storage_cache
+ModPagespeedDisableFilters insert_ga,make_google_analytics_async
+
 # - general filters
 ModPagespeedEnableFilters rewrite_domains,extend_cache
 ModPagespeedEnableFilters extend_cache_pdfs,elide_attributes
 ModPagespeedEnableFilters collapse_whitespace,remove_comments
-ModPagespeedEnableFilters insert_dns_prefetch,add_instrumentation
 ModPagespeedEnableFilters convert_meta_tags,remove_quotes,trim_urls
+ModPagespeedEnableFilters insert_dns_prefetch
 
 # - analytics filters
 #ModPagespeedEnableFilters insert_ga,make_google_analytics_async
@@ -61,8 +65,7 @@ ModPagespeedEnableFilters inline_import_to_link,combine_css,rewrite_css
 ModPagespeedEnableFilters fallback_rewrite_css_urls,rewrite_style_attributes
 
 # - JS-related filters
-ModPagespeedEnableFilters inline_javascript,outline_javascript
-ModPagespeedEnableFilters rewrite_javascript,prioritize_critical_css
+ModPagespeedEnableFilters outline_javascript,rewrite_javascript,combine_javascript
 
 # - image-related filters
 ModPagespeedEnableFilters rewrite_images,inline_images,dedup_inlined_images,sprite_images
