Removing javascript combine filter.

--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -65,7 +65,7 @@ ModPagespeedEnableFilters inline_import_to_link,combine_css,rewrite_css
 ModPagespeedEnableFilters fallback_rewrite_css_urls,rewrite_style_attributes
 
 # - JS-related filters
-ModPagespeedEnableFilters outline_javascript,rewrite_javascript,combine_javascript
+ModPagespeedEnableFilters rewrite_javascript
 
 # - image-related filters
 ModPagespeedEnableFilters rewrite_images,inline_images,dedup_inlined_images,sprite_images
