Removing critical images beacon.

--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -11,7 +11,7 @@ ModPagespeedRewriteLevel PassThrough
 ModPagespeedModifyCachingHeaders On
 ModPagespeedImplicitCacheTtlMs 30000
 ModPagespeedAnalyticsID UA-25133943-11
-ModPagespeedCriticalImagesBeaconEnabled On
+ModPagespeedCriticalImagesBeaconEnabled Off
 ModPagespeedInPlaceResourceOptimization Off
 ModPagespeedDisableRewriteOnNoTransform Off
 ModPagespeedCustomFetchHeader XAF-Origin pagespeed
