FCM-54: Convert Grunt build system to Gulp.

--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,16 @@ __pycache__/*
 __jinja_cache__/*
 .DS_Store
 .Thumbs
-node_modules/
+/node_modules/
 .env
 .Python
-lib/
-include/
-bin/
+/lib/
+/include/
+/bin/
 requirements.log
 npm-debug.log
 .develop/
-man/
+/man/
 compiler-latest.zip
 fatcatmap/templates/compiled/*
 bower_components/*
