--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "btoa": "~1.1.1",
     "wrench": "1.5.4",
     "webp-bin": "~0.1.4",
+    "karma": "~0.12.16",
+    "karma-jasmine": "~0.1.5",
     "gulp": "~3.8.5",
     "gulp-sass": "~0.7.2",
+    "gulp-karma": "~0.0.4",
     "gulp-svgmin": "~0.4.6",
     "gulp-imagemin": "~0.6.1",
-    "gulp-closure-compiler": "~0.2.1",
-    "karma": "~0.12.16",
-    "karma-jasmine": "~0.1.5"
+    "gulp-closure-compiler": "~0.2.1"
   }
 }
