--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/sgammon/fatcatmap.git"
+    "url": "https://github.com/momentum/fatcatmap.git"
   },
-  "bugs": "https://github.com/sgammon/fatcatmap/issues",
+  "bugs": "https://github.com/momentum/fatcatmap/issues",
   "licenses": [
     {
       "type": "Private",
@@ -20,17 +20,19 @@
   ],
   "devDependencies": {
     "btoa": "~1.1.1",
-    "wrench": "1.5.4",
+    "wrench": "~1.5.4",
     "webp-bin": "~0.1.4",
-    "karma": "~0.12.16",
+    "less-stream": "~0.1.1",
+    "closure-compiler-stream": "~0.1.1",
+    "karma": "~0.10.x",
+    "karma-coverage": "~0.1",
     "karma-jasmine": "~0.1.5",
+    "karma-junit-reporter": "~0.1",
+    "karma-phantomjs-launcher": "~0.1",
     "gulp": "~3.8.5",
-    "gulp-less": "~1.3.1",
-    "gulp-karma": "~0.0.4",
     "gulp-svgmin": "~0.4.6",
     "gulp-rimraf": "~0.1.0",
     "gulp-imagemin": "~0.6.1",
-    "gulp-sourcemaps": "~0.4.4",
-    "gulp-closure-compiler": "~0.2.1"
+    "gulp-sourcemaps": "~0.4.4"
   }
 }
